--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@
 }
 
 .main-content {
-  padding-top: 80px;
+  padding-top: 70px;
 }
 
 body {
